update swagger-client and swagger decorator
