# authentication/src/users/dto/signup.dto.ts
@@ -1,0 +1,25 @@
+import { IsString, IsNotEmpty, IsEmail } from 'class-validator';
+import { ApiProperty } from '@nestjs/swagger';
+
+export class SignupDto {
+  @ApiProperty({ type: 'string' })
+  @IsString()
+  @IsNotEmpty()
+  @IsEmail()
+  public username: string;
+
+  @ApiProperty({ type: 'string' })
+  @IsString()
+  @IsNotEmpty()
+  public password: string;
+
+  @ApiProperty({ type: 'string' })
+  @IsString()
+  @IsNotEmpty()
+  public firstname: string;
+
+  @ApiProperty({ type: 'string' })
+  @IsString()
+  @IsNotEmpty()
+  public lastname: string;
+}
